--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 mlflow==2.9.2
-scikit-learn==1.3.2
+scikit-learn>=1.4.0
 pandas==2.1.4
-numpy==1.24.3
+numpy>=1.26.0
 matplotlib==3.8.2
 seaborn==0.13.0
 pyyaml==6.0.1
